# jlrs

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  JlrsDerive.jl  README.md  config.toml  coverage.sh  jlrs.jl  main.yml  rustfmt.toml  tarpaulin-report.html  viewed.txt
benches/: Cargo.toml
benches/benches/: array_access.rs  arrays.rs  async_rt.rs  background_task.rs  call_function.rs  frames.rs  module.rs  mt_rt_pool.rs  static_symbol.rs  symbol.rs  track_array.rs  type_construction.rs  value.rs
crates/build_utils/jlrs_compat/: Cargo.toml  README.md
crates/ffi/jl_sys/: Cargo.toml  README.md  build.rs
crates/ffi/jlrs_sys/: Cargo.toml  README.md  build.rs
crates/jlrs/: Cargo.toml  build.rs
crates/jlrs/src/: args.rs  catch.rs  error.rs  lib.rs  private.rs  util.rs
crates/jlrs/tests/: catch_exception.rs  ccall.rs  constants.rs  constructor.rs  copied_array.rs  delegated_task.rs  derive.rs  function.rs  gc.rs  init_with_image_image_path_error.rs  into_jlrs_result.rs  mt_handle_async.rs  mt_handle_async_pool.rs  mt_handle_on_main.rs  mt_handle_pool_add_remove_workers.rs  mt_handle_pool_panic.rs  named_tuple.rs  parachute.rs  primitives.rs  runtime.rs  simple_vector.rs  tokio_rt.rs  type_construction.rs  union_all.rs
crates/jlrs_macros/: Cargo.toml  build.rs
crates/jlrs_macros/src/: lib.rs  version.rs
examples/: Cargo.toml  MyModule.jl  README.md  async_tasks.rs  call_julia.rs  ccall.jl  ccall.rs  ccall_throw_exception.rs  ccall_with_threads.rs  fully_async_async_std.rs  fully_async_tokio.rs  nested_async_scopes.rs  persistent_tasks.rs  plot.rs  with_rayon.rs
examples/async_tasks/: Cargo.toml  MyModule.jl  README.md
examples/async_tasks/src/: main.rs
examples/call_julia/: Cargo.toml  MyModule.jl  README.md
examples/call_julia/src/: main.rs
examples/ccall/: Cargo.toml  README.md  callrust.jl
examples/ccall/src/: lib.rs
examples/ccall_with_threads/: Cargo.toml  README.md  callrust.jl
examples/ccall_with_threads/src/: lib.rs
examples/fully_async/: Cargo.toml  MyModule.jl
examples/fully_async/src/: main.rs
examples/fully_async_async_std/: Cargo.toml
examples/fully_async_async_std/src/: main.rs
examples/fully_async_tokio/: Cargo.toml  README.md
examples/fully_async_tokio/src/: main.rs
examples/generator_tasks/: Cargo.toml
examples/generator_tasks/src/: main.rs
examples/nested_async_frames/: Cargo.toml  MyModule.jl
examples/nested_async_frames/src/: main.rs
examples/nested_async_scopes/: Cargo.toml  MyModule.jl  README.md
examples/nested_async_scopes/src/: main.rs
examples/persistent_tasks/: Cargo.toml  README.md
examples/persistent_tasks/src/: main.rs
examples/plot/: Cargo.toml  README.md
examples/plot/src/: main.rs
jl-sys/: Cargo.toml  README.md  build.rs  wrapper.h
jl-sys/src/: lib.rs
jl_sys/: Cargo.toml  LICENSE  README.md  build.rs  defines.h  dummy-bindings.rs  generate_bindings.sh  generate_bindings_unwind_c.sh  static_inlines.h  support  wrapper.h
jl_sys/def/lts/: libjulia.def  libopenlibm.def  libuv-2.def
jl_sys/def/rc3/: libuv-2.def
jl_sys/def/stable/: libjulia.def
jl_sys/src/: atomic_c_fn_ptr.rs  bindings.rs  bindings_1_6_i686_unknown_linux_gnu.rs  bindings_1_6_x86_64_pc_windows_gnu.rs  bindings_1_6_x86_64_unknown_linux_gnu.rs  bindings_1_7_i686_unknown_linux_gnu.rs  bindings_1_7_x86_64_apple_darwin.rs  bindings_1_7_x86_64_pc_windows_gnu.rs  bindings_1_7_x86_64_unknown_linux_gnu.rs  bindings_1_8_i686_unknown_linux_gnu.rs  bindings_1_8_x86_64_apple_darwin.rs  bindings_1_8_x86_64_pc_windows_gnu.rs  bindings_1_8_x86_64_unknown_linux_gnu.rs  bindings_1_9_i686_unknown_linux_gnu.rs  bindings_1_9_x86_64_pc_windows_gnu.rs  bindings_1_9_x86_64_unknown_linux_gnu.rs  bindings_nightly_x86_64_unknown_linux_gnu.rs  bindings_unwind.rs  bindings_win.rs  gc_frame.rs  inlined.rs  jlrs_c.c  jlrs_c.h  jlrs_cc.c  jlrs_cc.cc  jlrs_cc.h  jlrs_cc_ext.c  jlrs_cc_ext.cc  jlrs_cc_ext.h  jlrs_cc_reexport.c  jlrs_cc_reexport.h  lib.rs  types.rs
jl_sys/src/bindings/: bindings_1_10_32.rs  bindings_1_10_64.rs  bindings_1_11_32.rs  bindings_1_11_64.rs  bindings_1_6_32.rs  (+29 more)
jl_sys/tests/: gc_frame_tests.rs  sized_gc_frame_full_test.rs  unsized_gc_frame_full_test.rs
jlrs/: Cargo.toml  build.rs
jlrs/src/: Jlrs.jl  args.rs  array.rs  call.rs  catch.rs  ccall.rs  convert.rs  datatype.rs  error.rs  frame.rs  gc.rs  global.rs  info.rs  jl_sys_export.rs  jlrs.jl  julia.rs  julia_future.rs  layout.rs  lib.rs  memory.rs  mode.rs  module.rs  multitask.rs  ndarray.rs  not_inline.rs  prelude.rs  private.rs  safety.rs  stack.rs  sync.rs  traits.rs  util.rs  value.rs
jlrs/tests/: abstract_fields.rs  access_fields.rs  access_raw_field.rs  access_unboxed_array.rs  array_tests.rs  arrays.rs  async-std-rt.rs  async_std_rt.rs  async_std_rt_workers.rs  atomic_fields.rs  background_task.rs  borrow_array.rs  borrow_array_data.rs  bounds_error.rs  call_exception.rs  catch_exception.rs  ccall.rs  constants.rs  constructor.rs  convert_tests.rs  copied_array.rs  datatype.rs  delegated_task.rs  derive.rs  eval_string.rs  f16.rs  function.rs  functions.rs  gc.rs  init_with_image.rs  init_with_image_bindir_error.rs  init_with_image_image_path_error.rs  inline_array.rs  into_jlrs_result.rs  into_julia.rs  kw_func.rs  large_array.rs  layout.rs  layout_tests.rs  local_scope.rs  (+44 more)
jlrs_cfg/: Cargo.toml
jlrs_cfg/src/: lib.rs
jlrs_derive/: Cargo.toml  README.md
jlrs_derive/src/: lib.rs
jlrs_derive_tests/: Cargo.toml  JlrsDeriveTests.jl
jlrs_derive_tests/src/: impls.rs  lib.rs  util.rs
jlrs_macros/: Cargo.toml  build.rs
jlrs_macros/src/: constant_bytes.rs  derive.rs  lib.rs  module.rs  version.rs
jlrs_ndarray/: Cargo.toml  README.md
jlrs_ndarray/src/: lib.rs
julia_module_test/: Cargo.toml  JuliaModule.jl  JuliaModuleBenches.jl  JuliaModuleTest.jl  test.sh
julia_module_test/src/: array.rs  constants.rs  exceptions.rs  foreign.rs  generics.rs  lib.rs  ref_types.rs  typed_value.rs
src/: lib.rs  (+15 more)
tests/julia_module_test/: Cargo.toml  JuliaModule.jl  JuliaModuleTest.jl  test-async-agent.jl  test.sh
(+685 files in other folders)
