[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[features]
lto = ["jlrs/lto"]

[dependencies]
jlrs = { version = "0.22", path = "../jlrs", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async"] }
tokio ={ version = "1", features = ["rt"]}

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[profile.bench]
debug = true
lto = "thin"
codegen-units = 1

[[bench]]
name = "call_function"
harness = false

[[bench]]
name = "arrays"
harness = false

[[bench]]
name = "array_access"
harness = false

[[bench]]
name = "async_rt"
harness = false

[[bench]]
name = "background_task"
harness = false

[[bench]]
name = "frames"
harness = false

[[bench]]
name = "module"
harness = false

[[bench]]
name = "mt_rt_pool"
harness = false

[[bench]]
name = "static_symbol"
harness = false

[[bench]]
name = "symbol"
harness = false

[[bench]]
name = "track_array"
harness = false

[[bench]]
name = "type_construction"
harness = false

[[bench]]
name = "value"
harness = false
