[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
jlrs = { version = "0.20.0", path = "../jlrs", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt"]}

[[example]]
name = "async_tasks"
path = "async_tasks.rs"

[[example]]
name = "call_julia"
path = "call_julia.rs"

[[example]]
name = "persistent_tasks"
path = "persistent_tasks.rs"

[[example]]
name = "nested_async_scopes"
path = "nested_async_scopes.rs"

[[example]]
name = "ccall"
path = "ccall.rs"
crate-type = ["cdylib"]
test = true

[[example]]
name = "ccall_throw_exception"
path = "ccall_throw_exception.rs"
crate-type = ["cdylib"]
test = true
