[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2024"

[dev-dependencies]
jlrs = { version = "0.22", path = "../crates/jlrs", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt"]}
rayon = "1.10"

[[example]]
name = "async_tasks"
path = "async_tasks.rs"

[[example]]
name = "call_julia"
path = "call_julia.rs"

[[example]]
name = "persistent_tasks"
path = "persistent_tasks.rs"

[[example]]
name = "nested_async_scopes"
path = "nested_async_scopes.rs"

[[example]]
name = "with_rayon"
path = "with_rayon.rs"

[[example]]
name = "ccall"
path = "ccall.rs"
crate-type = ["cdylib"]
test = true

[[example]]
name = "ccall_throw_exception"
path = "ccall_throw_exception.rs"
crate-type = ["cdylib"]
test = true
