[package]
name = "jl-sys"
version = "0.25.1"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = """
jl-sys contains the generated bindings for the Julia C API used by jlrs.
"""
documentation = "https://docs.rs/jl-sys"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
readme = "README.md"
keywords = ["Julia", "math", "mathematics", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
license = "MIT"
edition = "2021"
links = "julia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
julia-1-6 = ["jlrs-macros/julia-1-6"]
julia-1-7 = ["jlrs-macros/julia-1-7"]
julia-1-8 = ["jlrs-macros/julia-1-8"]
julia-1-9 = ["jlrs-macros/julia-1-9"]
julia-1-10 = ["jlrs-macros/julia-1-10"]
julia-1-11 = ["jlrs-macros/julia-1-11"]
julia-1-12 = ["jlrs-macros/julia-1-12"]

fast-tls = []
lto = []

no-link = []
yggdrasil = ["no-link"]
i686 = []
debug = []
macos = []
windows = []
docs = ["julia-1-12"]

[build-dependencies]
cc = "1"
cfg-if = "1"
jlrs-macros = { path = "../jlrs_macros", version = "0.4"}

[package.metadata.docs.rs]
features = ["docs"]
