[package]
name = "jlrs-derive"
version = "0.5.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = """
jlrs-derive contains the custom derives offered by jlrs.
"""
documentation = "https://docs.rs/jlrs"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
readme = "README.md"
keywords = ["Julia", "math", "mathematics", "bindings", "ffi"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"