[package]
name = "jlrs-derive-tests"
version = "0.1.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jlrs/jlrs-derive"]

[dependencies]
jlrs-derive = { path = "../jlrs_derive" }

[dependencies.jlrs]
path = "../jlrs"
default-features = false