[package]
name = "jlrs-derive-tests"
version = "0.1.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2018"

[features]
default = ["jlrs/jlrs-derive"]
lts = ["jlrs/lts"]

[dependencies]
jlrs-derive = { path = "../jlrs_derive" }
jlrs = { path = "../jlrs", features = ["sync-rt"] }
