[package]
name = "jlrs-macros"
version = "0.5.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = """
jlrs-macros contains the custom derives offered by jlrs.
"""
documentation = "https://docs.rs/jlrs-macros"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
readme = "../README.md"
keywords = ["Julia", "math", "mathematics", "bindings", "ffi"]
license = "MIT"
edition = "2021"
rust-version = "1.79"

[features]
default = []
julia-1-10 = []
julia-1-11 = []
julia-1-12 = []
julia-1-13 = []
windows = []

derive = ["proc-macro2"]
ccall = ["proc-macro2"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", optional = true }
syn = { version = "2", features = ["full", "extra-traits", "printing"] }
quote = { version = "1" }
itertools = "0.14"

[package.metadata.docs.rs]
features = ["ccall", "derive", "julia-1-12"]
