[package]
name = "jlrs-ndarray"
version = "0.2.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2018"
description = """
jlrs is a library built around bindings to the Julia C API that enables Julia code to be called 
from Rust. jlrs can move many kinds of data from Rust to Julia and back, share n-dimensional 
numerical arrays between languages, call arbitrary functions, and load code from arbitrary Julia
source files. jlrs currently supports Linux and Windows.
"""
documentation = "https://docs.rs/jlrs-ndarray"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
keywords = ["Julia", "math", "mathematics", "ndarray", "jlrs"]
license = "MIT"

[features]
docs-rs = ["jlrs/docs-rs"]

[dependencies]
jlrs = { path = "../jlrs", version = "0.8.0" }
ndarray = "0.14" 

[package.metadata.docs.rs]
features = ["docs-rs"]