[package]
name = "jlrs-ndarray"
version = "0.4.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2018"
description = """
Borrow data from Julia arrays in jlrs as ndarray's `ArrayView` and `ArrayViewMut`.
"""
documentation = "https://docs.rs/jlrs-ndarray"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
keywords = ["Julia", "math", "mathematics", "ndarray", "jlrs"]
license = "MIT"

[features]
docs-rs = ["jlrs/docs-rs"]

[dependencies]
jlrs = { path = "../jlrs", version = "0.10" }
ndarray = "0.15" 

[package.metadata.docs.rs]
features = ["docs-rs"]