[package]
name = "julia_module_test"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
julia-1-10 = ["jlrs/julia-1-10"]
julia-1-11 = ["jlrs/julia-1-11"]
julia-1-12 = ["jlrs/julia-1-12"]
julia-1-13 = ["jlrs/julia-1-13"]
windows = ["jlrs/windows"]
lto = ["jlrs/lto"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jlrs = { path = "../jlrs", features = ["ccall", "jlrs-derive"] }
