[package]
name = "jlrs"
version = "0.22.2"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = """
jlrs provides bindings to the Julia C API that enable Julia code to be called from Rust and more.
"""
documentation = "https://docs.rs/jlrs"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
readme = "../../README.md"
keywords = ["Julia", "math", "mathematics", "bindings", "ffi"]
categories = ["api-bindings", "mathematics"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[features]
default = []

# Enable all features
full = ["local-rt", "tokio-rt", "jlrs-ndarray", "f16", "complex", "jlrs-derive", "ccall", "multi-rt"]

# Enable all features except any  runtimes
full-no-rt = ["async", "jlrs-ndarray", "f16", "jlrs-derive", "ccall"]

# Runtimes

# Enable local runtime
local-rt = ["jlrs-sys/fast-tls"]

# Enable async runtime
async-rt = ["async", "jlrs-sys/fast-tls", "tokio"]

# Enable tokio as backing runtime
tokio-rt = ["async-rt"]

# Enable tokio IO  drivers
tokio-net = ["tokio-rt", "tokio/net"]

# Enable multithreaded runtime
multi-rt = ["jlrs-sys/fast-tls"]

# Utilities

# Enable task and channel traits used by the async runtime
async = ["async-channel"]
# Enable `ccall` module for use from `ccall`ed Rust functions
ccall = ["jlrs-macros/ccall"]
# Enable using `f16` as a layout for `Float16` data
f16 = ["half"]
# Enable using `num_complex::Complex` as a layout for `Complex` data
complex = ["num-complex"]
# Enable converting a Julia array to an `ArrayView(Mut)` from ndarray
jlrs-ndarray = ["ndarray"]
# Enable derive macros
jlrs-derive = ["jlrs-macros/derive"]
# Compile the support library with support for cross-language LTO.
lto = ["jlrs-sys/lto"]

# Target or link a specific Julia build or arch.

# Link debug build of Julia
debug = ["jl-sys/debug"]
# Link 32-bits version of Julia on Linux
i686 = ["jlrs-sys/i686"]
# Cross-compile to Windows
windows = ["jl-sys/windows", "jlrs-sys/windows", "jlrs-macros/windows"]
# Cross-compile to macOS
macos = ["jlrs-sys/macos"]

# Used to generate docs for docs.rs
docs = ["jl-sys/docs", "jlrs-sys/docs", "jlrs-macros/docs", "full"]

[dependencies]
jl-sys = { version = "0.27", path = "../ffi/jl_sys" }
jlrs-sys = { version = "0.2", path = "../ffi/jlrs_sys" }
jlrs-macros = { version = "0.5", path = "../jlrs_macros" }
smallvec = {version = "1", features = ["const_generics"]}
thiserror = "2"
once_cell = "1"
parking_lot = "0.12"
rustc-hash = "2"
lock_api = "0.4"
fnv = "1"
atomic = "0.6"
semver = "1"

async-channel = { version = "2", optional = true }
half = { version = "2.4", optional = true }
ndarray = { version = "0.16", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "sync", "time"]}
num-complex = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "sync"]}

[build-dependencies]
jlrs-compat = { path = "../build_utils/jlrs_compat", version = "0.1"}
find-julia = { path = "../build_utils/find_julia", version = "0.1"}

[package.metadata.docs.rs]
features = ["docs"]
