[package]
name = "async-tasks"
version = "0.1.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# You can use tokio instead of async-std by enabling the feature tokio-rt rather than async-std-rt
jlrs = { path = "../../jlrs", features = ["async-std-rt"] }
crossbeam-channel = "0.5"