[package]
name = "fully-async-tokio"
version = "0.1.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jlrs = { path = "../../jlrs", features = ["tokio-rt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}