[package]
name = "jlrs-compat"
version = "0.1.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = """
Defines compatible and stable versions of Julia supporte by jlrs
"""
documentation = "https://docs.rs/jlrs"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
readme = "README.md"
keywords = []
categories = []
license = "MIT"
edition = "2024"
rust-version = "1.85"

[dependencies]
