[package]
name = "jlrs-sys"
version = "0.2.0"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = """
Low-level extensions to the Julia C API
"""
documentation = "https://docs.rs/jlrs"
homepage = "https://github.com/Taaitaaiger/jlrs"
repository = "https://github.com/Taaitaaiger/jlrs"
readme = "README.md"
keywords = []
categories = []
license = "MIT"
edition = "2024"
rust-version = "1.85"

[features]
fast-tls = []
lto = []

i686 = []
debug = []
macos = []
windows = []
docs = []

[dependencies]
jl-sys = { path = "../jl_sys", version = "0.26"}

[build-dependencies]
find-julia = { path = "../../build_utils/find_julia", version = "0.1" }
jlrs-compat = { path = "../../build_utils/jlrs_compat", version = "0.1" }
cc = "1"
cfg-if = "1"

[package.metadata.docs.rs]
features = ["docs"]
